# ai-ready-python-codebase

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.py  cdk.json  docker-compose.yml  package-lock.json  package.json  pyproject.toml  renovate.json  vulture_whitelist.py
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: bash-guard.sh  pyproject-guard.sh  ruff-fix.sh  session-start.sh  stop-mypy.sh
.claude/rules/: code.md  tests.md
.claude/skills/writing-tests/: SKILL.md
.claude/skills/writing-tests/references/: anti-patterns.md  determinism.md  integration-testing.md  suite-health.md  test-data.md  test-doubles.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/explanation/: CLAUDE.md
docs/explanation/repo_defaults/: agent-instructions.md  dependencies.md  editor-config.md  mypy.md  package-design.md  ruff.md  skills-and-agents.md  testing.md  verification-loop.md
src/ai_ready_python_codebase/: CLAUDE.md  __init__.py  __main__.py  config.py  exceptions.py  hello_lambda.py  hello_stack.py  logger.py
src/ai_ready_python_codebase/lambdas/: __init__.py
src/ai_ready_python_codebase/lambdas/hello/: __init__.py  index.py
src/example_project/: CLAUDE.md  __init__.py  __main__.py  exceptions.py  logger.py
tests/: conftest.py  test_ai_ready_python_codebase.py  test_handler.py  test_hello_stack.py  test_nag.py
tests/unit/: test_example_project.py  test_logger.py
