[project]
name = "ai-ready-python-codebase"
dynamic = ["version"]
description = "AI-first AWS CDK template that deploys a Hello World Lambda"
readme = "README.md"
license = "MIT"                # SPDX expression (PEP 639)
license-files = ["LICENSE"]
requires-python = ">=3.12"  # support floor — ruff target-version matches this
# ── Runtime deps: the infrastructure-as-code libraries ───────────────────────
dependencies = [
    # AWS CDK v2 — core framework plus every L1/L2 construct library in ONE
    # package (the v1 per-service packages are end-of-life). This is the whole
    # infrastructure surface, expressed as typed Python.
    "aws-cdk-lib>=2.260",
    # cdk-nag — a synth-time security/best-practice oracle (AwsSolutions rule pack)
    # that runs as a CDK Aspect: deterministic, needs no AWS account, fails the
    # build on insecure infra. The infrastructure equivalent of the ruff/mypy gate.
    # Capped <3: cdk-nag 3.0.x has an Aspects-API regression that breaks against
    # current aws-cdk-lib ("aspect.visit is not a function"); 2.9.x is the latest
    # working line. Lift the cap once 3.x is fixed — the nag test will catch it.
    "cdk-nag>=2.9.7,<3",
    # The base Construct programming model CDK is built on; a peer dependency of
    # aws-cdk-lib that AWS recommends declaring explicitly so its version is pinned.
    "constructs>=10.4",
]

[dependency-groups]
# ── Dev-only deps: the verification tools an agent runs to check its own work ─
dev = [
    "mypy>=2.0",         # strict static type checker — the type oracle ([tool.mypy])
    "pip-audit>=2.7",    # scans deps against the PyPI CVE advisory DB (supply-chain)
    "pre-commit>=4.0",   # git-hook framework running the commit-time guardrails
    "pytest>=8.3",       # test runner — the primary verification oracle
    "pytest-cov>=6.0",   # coverage: did the agent test the synth output it wrote?
    "pytest-xdist>=3.5", # parallel test execution — a faster feedback loop
    "ruff>=0.8",         # fast lint + format; the edit-time oracle in the hook
    "vulture>=2.14",     # dead-code detector for unreachable funcs ruff can't see
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_ready_python_codebase"]

[tool.hatch.version]
path = "src/ai_ready_python_codebase/__init__.py"

[tool.ruff]
# Lint for the support FLOOR (requires-python = 3.12), not the dev interpreter in
# .python-version (3.13). This stops agents from emitting 3.13-only syntax that
# would silently break a 3.12 user — an inconsistency an agent can't infer, so we
# state it. See CLAUDE.md "Python versions".
target-version = "py312"
src = ["src"]
# vulture_whitelist.py is a vulture data file, not runnable code: it's a list of
# bare names (undefined, "useless" expressions) that vulture reads as fake uses.
# Linting it would only ever produce F821/B018 noise, so keep ruff out of it.
# cdk.out is generated synth output (CloudFormation + copied assets) — never lint it.
extend-exclude = ["vulture_whitelist.py", "cdk.out"]

[tool.ruff.lint]
# ── Why these rules for an AI-first codebase ─────────────────────────────────
# Each family turns a mistake agents commonly make into a fast, machine-checkable
# failure. That is the whole game: a linter is a deterministic oracle Claude can
# run and self-correct against, without a human in the loop. Grouped by the
# failure they prevent, not alphabetically, so the intent is legible.
#
# Correctness / bugs agents introduce:
#   E, F   — pycodestyle errors + pyflakes: undefined names, unused imports
#            (F401), unused vars (F841). The floor.
#   B      — bugbear: mutable default args, misused loop vars — classic LLM traps.
#   PLE    — pylint errors: real bugs (bad super() calls, bad string formatting).
#   RUF, PIE, RET, SIM, C4 — de-duplication: no redundant branches, returns,
#            comprehensions, or passes left behind after an agent's edits.
# Modern idioms — counter training-data bias. Agents default to whatever APIs were
#   most common in their training data, which skews OLD; these push code current:
#   UP (pyupgrade), FURB (refurb), PTH (pathlib over os.path), FLY (f-strings).
# Security — agents paste insecure snippets confidently:
#   S      — bandit: S301 pickle, S506 yaml.load, S324 weak hashes, S603/S607
#            subprocess. Caught at author time, not in review.
# Fail-loud error handling — the opposite of a silent agent-written except block:
#   BLE    — BLE001 blind `except Exception`. Carve-out: allowed when it logs
#            (`exc_info=True`) or re-raises; a silent swallow is not.
#   E722   — bare `except:`. S110/S112 — try-except-pass / -continue.
#   TRY    — tryceratops: raise-and-return anti-patterns, over-broad tries.
#   EM     — message in a variable so tracebacks read cleanly.
#   RSE    — `raise ... from` and unneeded parens on raise.
# Concurrency:
#   ASYNC  — ASYNC210/221 blocking HTTP/process calls inside async, and friends.
# Simplicity / complexity budget — keep each function small enough that an agent
#   can hold the whole thing in context and reason about it correctly:
#   C90 (mccabe C901, threshold below), PLR0912/PLR0915 (branches/statements),
#   SIM, PLR, PLW (pylint refactor + warnings).
# Type annotations at edit time — mypy is the authority but runs at commit/CI;
#   these run in the fast ruff hook so gaps surface as the agent types:
#   ANN    — every function annotated. ANN401 bans `Any`, which mypy --strict
#            does NOT: agents reach for `Any` to silence a type they can't work
#            out, and this is the only check that catches it.
# Consistency — predictable names + imports so an agent's just-in-time retrieval
#   lands on the right symbol every time:
#   I (import order), N (pep8 naming), TID (no relative imports — absolute paths
#   are unambiguous to an agent), A (don't shadow builtins).
# No lazy suppression — stop agents silencing the very checks above:
#   PGH    — PGH004 bans blanket `# noqa`; PGH003 bans blanket `# type: ignore`
#            (a code is required). Every suppression stays visible and reviewable.
# Logging correctness — structured logs must stay machine-parseable:
#   G, LOG — no f-strings/`%`/`.format` inside log calls; correct logging usage.
# API clarity + no stray output:
#   FBT    — no boolean-trap positional args (an agent reading `f(True)` can't
#            tell what it means); ARG — no unused arguments; SLF — no reaching
#            into private members; T20 — no stray `print` debug output.
# Tests:
#   PT     — flake8-pytest-style: uniform fixtures/asserts so test files read alike.
# Time correctness:
#   DTZ    — no naive datetimes (a silent, data-corrupting agent mistake).
# Performance:
#   PERF   — obvious anti-patterns (manual loops that should be comprehensions).
# Dead code — a distinctly AI-authored smell (agents leave the old version behind
#   after an edit), which pollutes future context:
#   ERA    — commented-out code. F401/F841 (unused imports/vars) above; truly
#            unreachable *functions* are caught by vulture ([tool.vulture]).
select = [
    "E", "F", "I", "UP", "B", "SIM", "RUF", "PTH", "PERF", "S", "ASYNC",
    "A", "C4", "DTZ", "PIE", "RET", "TC", "ARG", "FURB", "TRY", "PLE",
    "PLW", "PLR", "BLE", "C90", "N", "PGH", "PT", "TID", "G", "LOG",
    "EM", "RSE", "SLF", "FBT", "FLY", "T20", "ANN", "ERA",
]
# E501 (line length) is the formatter's job, not the linter's. S101 (assert) is
# NOT ignored globally: an `assert` in production code silently vanishes under
# `python -O`, so an agent using one as a runtime guard is a real bug — it's
# waived only in tests (below), where asserts are how tests state intent.
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# C901 — cyclomatic (McCabe) complexity: the number of independent paths through a
# function (+1 per if/elif/for/while/except and per `and`/`or`). It's a proxy for
# "how much must you hold in your head to be sure this function is correct."
#
# Why it's an AI-first lever: an agent reasons over what fits in its context. A
# 30-path function is where agents quietly introduce a bug in a branch they never
# fully traced. Capping complexity forces small, single-purpose functions the
# agent can read, test exhaustively, and modify safely.
#
# 10 is McCabe's original threshold and the conventional default. Drop to 8 for a
# stricter agent-friendly ceiling; going much lower backfires — it forces
# premature decomposition, and more tiny functions across more files means MORE
# for an agent to trace, not less. Complementary caps come from the PLR family
# (selected above): PLR0912 branches, PLR0915 statements, PLR0913 arguments — all
# at their defaults; tune them here if a project needs different limits.
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Tests assert freely (S101), use throwaway "secrets" (S105/S106), accept unused
# fixture params (ARG001), compare against literal expected values (PLR2004), and
# don't need a return annotation on every test function (ANN201) — none of these
# are smells in a test.
"tests/**/*.py" = ["S101", "S105", "S106", "ARG001", "PLR2004", "ANN201"]
# Lambda handlers legitimately `print` to CloudWatch (T201) and must accept the
# AWS-supplied `event`/`context` params even when unused (ARG001). Neither is a
# smell here — this is the one place a bare print is the intended interface.
"src/ai_ready_python_codebase/lambdas/**/*.py" = ["T201", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["ai_ready_python_codebase"]

[tool.mypy]
mypy_path = "src"
strict = true
# Beyond --strict, surface the mistakes agents make most and can't see alone:
#   warn_unreachable      — dead branch after a type narrows (often an agent bug).
#   ignore-without-code   — a bare `# type: ignore` is banned; it must name the
#                           error code. Pairs with ruff PGH003 so suppressions
#                           stay specific and reviewable, never a blanket mute.
#   redundant-expr        — always-true/dead sub-expressions.
#   truthy-bool           — `if some_object:` where the object is always truthy.
#   possibly-undefined    — a var defined on only some branches.
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
]

[tool.vulture]
# Static dead-code detector — catches unreachable functions/methods that ruff's
# F401/F841 (unused imports/vars) can't see. `tests/` is scanned alongside `src/`
# so a public API exercised only by tests isn't mistaken for dead code; pytest
# fixtures (called by name via injection, never directly) are excused by their
# decorator. Names invoked only by string (the Lambda `handler`, referenced as
# "index.handler" in CDK) live in the whitelist.
paths = ["src", "tests", "vulture_whitelist.py"]
ignore_decorators = ["@pytest.fixture"]
min_confidence = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# --strict-markers + --strict-config: an unknown marker or malformed config is a
# hard error, not a warning an agent scrolls past. -ra prints the reason for every
# non-pass, giving the agent's verification loop a concrete signal to act on.
addopts = "-ra -q --strict-markers --strict-config"
# filterwarnings=error: a DeprecationWarning is the single best free signal that an
# agent is using an old API (the training-data-bias the UP/FURB rules target) —
# so make it a failure the agent must fix, not a line it scrolls past. Add
# targeted "ignore::SomeWarning:pkg" entries here if a dependency forces noise.
filterwarnings = ["error"]
# xfail_strict: a test marked xfail that actually PASSES fails the suite — so a
# bug an agent silently fixed can't keep hiding behind an "expected failure".
xfail_strict = true
markers = ["slow", "integration"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
# show_missing lists the exact unexecuted line numbers, so "did the agent test
# what it wrote?" becomes a precise, actionable readout rather than a percentage.
show_missing = true
# Set a floor once the project has real code, e.g. `fail_under = 80`, to make
# coverage a hard CI gate instead of a judgment call. Left off in the template so
# the starter suite doesn't fail an empty project.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
