[project]
name = "example-project"
dynamic = ["version"]
description = "A template python codebase that is designed to be AI first"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.120",
    "mypy>=2.0",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "vulture>=2.14",
]
# Opt-in: mutation testing. Slow, so it's NOT in `dev` or any commit/CI gate.
# Run on demand: `uv run --group mutation mutmut run`. See docs/.../testing.md.
mutation = [
    "mutmut>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
example-project = "example_project.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/example_project"]

[tool.hatch.version]
path = "src/example_project/__init__.py"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "SIM", "RUF", "PTH", "PERF", "S",
    "A", "C4", "DTZ", "PIE", "RET", "TC", "ARG", "FURB", "TRY", "PLE",
    "PLW", "PLR", "BLE", "C90", "N", "PGH", "PT", "TID", "G", "LOG",
    "EM", "RSE", "SLF", "FBT", "FLY", "T20", "ANN", "ERA",
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "ARG001", "PLR2004", "ANN201"]
"src/example_project/__main__.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["example_project"]

[tool.mypy]
mypy_path = "src"
strict = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
]

[tool.mutmut]
# Mutate the package; the suite (pytest testpaths) runs to catch the mutants.
# Opt-in; see docs. mutmut 3 config names — source_paths, not paths_to_mutate.
source_paths = ["src/"]

[tool.vulture]
paths = ["src", "tests"]
ignore_decorators = ["@pytest.fixture"]
min_confidence = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = ["error"]
xfail_strict = true
markers = ["slow", "integration"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
